[KAIZEN-0] spesifisere charset for snapshotfiler